src/css/navbar.css
/*
* Meshki v1.3.0
* Copyright 2016, Mohammad reza Hajianpour <me@borderliner.ir>
* http://meshki.borderliner.ir/
* Free to use under the MIT license.
* https://opensource.org/licenses/MIT
*/

/* Navbar
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* General attributes */
.nav ul {
  width: 100%;
  background-color: #222;
  border-bottom: 2px solid #E1E1E1;
  padding: 0;
  margin-top: 0px;
  list-style-type: none;
  overflow: hidden;
  z-index: 1;
}

/* Fixed Navbar properties */
.nav.fixed {
  position: fixed;
  width: 100%;
  z-index: 1;
}

/* Elements in the navbar start from the left side */
.nav ul li {
  float: left;
  margin-bottom: 0px;
}

/* Anchors inside lists' attributes */
.nav ul li > a {
  display: inline-block;
  color: #E1E1E1;
  padding: 14px 16px;
  text-align: center;
  text-decoration: none;
  transition: background-color .2s ease-in-out;
}

/* Active navbar button */
.nav ul li > a.active {
  background-color: #111;
}

/* Logo of the website, it must be the first child of navbar*/
.nav ul li:first-child a.logo {
  background-color: #E1E1E1;
  color: black;
}

/* Lighten the logo when the mouse is over it */
.nav ul li:first-child a.logo:hover {
  background-color: #F5F5F5;
  color: black;
}

/**
 * Change the link color to #111 (black) on hover
 * Only direct children are affected, which means it excludes dropdowns
 */
.nav ul li > a:hover {
  background-color: #111;
}

/* Send the elements to the right side with nav-right */
.nav ul li.nav-right {
  position: relative;
  top: 7px;
  right: 16px;
  float: right !important;
}

/* Send the elements to the left side with nav-left */
.nav ul li.nav-left {
  position: relative;
  top: 7px;
  right: -16px;
  float: left !important;
}

.nav ul a.button,
.nav ul button {
  margin: 0px 5px 0px 5px !important;
}

/* Navigation Dropdown Button */
li.nav-dropdown {
  display: inline-block;
}

/* Dropdown content attributes */
.nav ul .nav-dropdown-content {
  display: block;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  min-width: 160px;
  background-color: #111;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  transition: visibility .2s, opacity .2s ease-in-out;
}

/* Each link in dropdown's content */
.nav-dropdown-content a {
  display: block;
  color: #E1E1E1;
  padding: 12px 16px;
  text-decoration: none;
  text-align: left;
}

/* When the mouse is on each option */
.nav-dropdown-content a:hover {
  background-color: #444;
}

/* When the dropdown is open, change the color of dropdown's button */
.nav-dropdown:hover .nav-dropdown-button {
  background-color: #111;
}

/* Display the content when the mouse is on dropdown's button */
.nav-dropdown:hover .nav-dropdown-content {
  visibility: visible;
  opacity: 1;
}

